[gd_scene load_steps=7 format=2]

[ext_resource path="res://tanks/Tank.tscn" type="PackedScene" id=1]
[ext_resource path="res://tanks/EnemyTank.gd" type="Script" id=2]
[ext_resource path="res://bullets/EnemyBullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/onlyObjects_retina_rotated.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]

extents = Vector2( 38.0332, 37.4239 )

[sub_resource type="CircleShape2D" id=2]

radius = 208.495

[node name="EnemyTank" instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 7
script = ExtResource( 2 )
Bullet = ExtResource( 3 )

[node name="Body" parent="." index="0"]
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 268, 186, 80, 76 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 1 )

[node name="Turret" parent="." index="2"]
texture = ExtResource( 4 )
offset = Vector2( 24.12, 0 )
region_enabled = true
region_rect = Rect2( 452, 34, 60, 24 )

[node name="Muzzle" parent="Turret" index="0"]
position = Vector2( 57.57, 0 )

[node name="Area2D_DetectRadiuls" type="Area2D" parent="." index="4"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_DetectRadiuls" index="0"]
visible = false
shape = SubResource( 2 )

[node name="LookAhead1" type="RayCast2D" parent="." index="5"]
position = Vector2( 36.01, 35.16 )
enabled = true
cast_to = Vector2( 80, 0 )
collision_mask = 2

[node name="LookAhead2" type="RayCast2D" parent="." index="6"]
position = Vector2( 36.01, -35.16 )
enabled = true
cast_to = Vector2( 80, 0 )
collision_mask = 2

[connection signal="body_entered" from="Area2D_DetectRadiuls" to="." method="_on_Area2D_DetectRadiuls_body_entered"]
[connection signal="body_exited" from="Area2D_DetectRadiuls" to="." method="_on_Area2D_DetectRadiuls_body_exited"]
